[package]
name = "tlv493d"
description = "Async driver for the Infineon tlv493d 3-DoF I2C hall-effect sensor"
repository = "https://github.com/schmettow/tlv493d"
keywords = ["embedded", "no_std", "sensor", "i2c", "tlv493d"]
authors = ["ryan <ryan@kurte.nz>", "mart <schmettow@web.de>"]
license = "MPL-2.0"
version = "0.1.3"
edition = "2024"


[dependencies]
log = "0.4"
embedded-hal = "1.0.0"
bitflags = "1.3.2"

#linux-embedded-hal = { version = "0.4.0", optional = true }
#structopt = { version = "0.3.20", optional = true }
#simplelog = { version = "0.8.0", optional = true }
#thiserror = { version = "1.0.21", optional = true }
#ctrlc = { version = "3.1.6", optional = true }
anyhow = { version = "1.0.100", optional = true }
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"

#[[bin]]
#name = "tlv493d-util"
#path = "src/util.rs"
#required-features = [ "util" ]
